Create free time slots table (#18)
